--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Wolf</title>
+  <title>Wolfie</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -65,6 +65,10 @@
   </div>
   <div class="moon"></div>
   <div class="wolf"></div>
+    <h1><center><p style="color:white;">Wolfie</h1>
+  <div></div>
+  <div></div>  <div></div>
+  <h5><center><p style="color:white;">(181818)</h5>
 </div>
 <!-- partial -->
   
